--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -15,3 +15,14 @@
   font-family: anzo3;
   src: url(./assets/file3.woff2);
 }
+
+
+#page1-in {
+  position: relative;
+  perspective: 1000px;
+}
+
+#tiltDiv {
+  width: fit-content;
+  transform: rotate(0deg);
+}
